# eyecu-qt

./: .gitignore  .travis.yml  AUTHORS  INSTALL  README  TRANSLATORS
src/: CMakeLists.txt  src.pro
src/definitions/: NetCommon.h  actiongroups.h  jingleicons.h  mapicons.h  mapobjectdatarole.h  mapobjecttyperole.h  menuicons.h  messagechatwindowwidgets.h  messagedataroles.h  messageeditcontentshandlerorders.h  messageeditororders.h  messagehandlerorders.h  messagenormalwindowwidgets.h  messageviewurlhandlerorders.h  messagewindowwidgets.h  messagewriterorders.h  multiuserdataholderorders.h  multiuserdataroles.h  multiuseritemlabels.h  multiusernotifyorders.h  multiusertooltiporders.h  namespaces.h  networkicons.h  notificationdataroles.h  notificationtypeorders.h  notificationtypes.h  optionnodeorders.h  optionnodes.h  optionvalues.h  optionwidgetorders.h  resources.h  rosterclickhookerorders.h  rosterdataholderorders.h  rosterindexkindorders.h  rosterindexroles.h  rosterlabelholderorders.h  rosterlabels.h  rosternotifyorders.h  rostertooltiporders.h  serviceicons.h  (+10 more)
src/interfaces/: iabbreviations.h  iactivity.h  iattention.h  iavatars.h  ichatmarkers.h  iclienticons.h  iconsistentcolorgeneration.h  idefaultconnection.h  iemoji.h  iemoticons.h  ieyecubot.h  ifilestreamsmanager.h  igcompass.h  igeoloc.h  ijingle.h  imap.h  imapcontacts.h  imaplocationselector.h  imapmagnifier.h  imapmessage.h  imapphoto.h  imapsearch.h  imessageprocessor.h  imessagestylemanager.h  (+27 more)
src/plugins/clienticons/: CMakeLists.txt  clienticons.cpp  clienticons.h  clienticons.pri  clienticons.pro
(+2559 files in other folders)
